[tool.poetry]
name = "q-book-util"
version = "0.1.0"
description = ""
authors = ["Masaaki Uesaka <masaaki.uesaka@arithmer.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2020.10.28"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
